--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     //okgo
     implementation 'com.lzy.net:okgo:3.0.4'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
 }
